--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <img src="./images/about.jpeg"  width="600px" height="200px" class="img-fluid" alt="" id="home"> 
           </div>
           <div class="col-md-6">
-              <h2 id="h2">Welcome to Pet Shop</h2>
+              <h2 id="h2">Welcome to Our Pet Shop</h2>
               <p id="homepara"><b><span style="color: green;">WELCOME TO THE PET SHOP: </span></b>Pet Shop is a sanctuary dedicated to the beauty and preservation of bird species from around the world. We offer a unique opportunity to observe these amazing creatures up close in naturalistic settings.</p>
               <p id="homepara">Our mission is to educate, inspire, and support bird conservation efforts. Whether you're a bird enthusiast or just looking for a peaceful day surrounded by nature, Birds Park offers something special for everyone.</p>
                
